# rsbench

./: 404.html  Cargo.toml  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: android-corss-build.yaml  android-cross-build.yaml  build-amd64.yaml  build-arm64.yaml  build-docs.yaml  build.yaml  cargo-publish.yaml  ci.yaml  linux-cross-build-selfhost.yaml  linux-cross-build.yaml  macos-build.yaml  test.yaml  windows-build.yaml
demos/: Demo.mkv
docs/: .gitignore  mkdocs.yml
docs/docs/: index.en.md  index.md  index.zh.md  install.en.md  install.zh.md  usage.en.md  usage.zh.md
en/: index.html
en/install/: index.html
en/usage/: index.html
install/: index.html
search/: search_index.json
src/: config.rs  main.rs  utils.rs
src/bench/: disk.rs  fibonacci.rs  mem.rs  mod.rs  network.rs
src/info/: cpu.rs  disk.rs  kernel.rs  mem.rs  mod.rs  os.rs  swap.rs  virt.rs
src/media/: google_play_store.rs  hbomax.rs  iqiyi_oversea.rs  mod.rs  netflix.rs  youtube_cdn.rs  youtube_premium.rs
src/tune/: mod.rs
src/tune/ip_check/: cloudflare.rs  ip_sb.rs  ipcheck_ing.rs  ipinfo_io.rs  ipip_net.rs  ipquery_io.rs  mod.rs  myip_la.rs  pconline.rs  utils.rs  vore_api.rs
src/tune/speedtest/: mod.rs  multi.rs  single.rs
src/unlock_test/: animefesta.rs  bahamut.rs  bbc_iplayer.rs  bilibili.rs  bilibili_china_hk_mo_tw.rs  bilibili_china_mainland.rs  bilibili_china_tw_only.rs  dazn.rs  four_gtv.rs  google_play_store.rs  hami_video.rs  hbomax.rs  headers.rs  hulu_jp.rs  iqiyi_oversea.rs  kancolle.rs  lemino.rs  mod.rs  mora.rs  mytv_super.rs  netflix.rs  nowe.rs  princess_connect_redive_japan.rs  showmax.rs  sling_tv.rs  steam.rs  unext.rs  utils.rs  viutv.rs  youtube_cdn.rs  youtube_premium.rs
src/unlock_test/unlock_script/: animefesta.rs  bahamut.rs  bbc_iplayer.rs  bilibili.rs  dazn.rs  four_gtv.rs  google_play_store.rs  hami_video.rs  hbomax.rs  hulu_jp.rs  iqiyi_oversea.rs  kancolle.rs  lemino.rs  mod.rs  mora.rs  mytv_super.rs  netflix.rs  nowe.rs  princess_connect_redive_japan.rs  showmax.rs  sling_tv.rs  steam.rs  unext.rs  viutv.rs  youtube_cdn.rs  youtube_premium.rs
src/utils/: color.rs  mod.rs  report.rs  term.rs
usage/: index.html
