[package]
name = "rsbench"
version = "0.1.3" # It is recommended that every Commit that modifies a Rust file should update a minor version.
edition = "2021"

authors = ["moohr <moohric@moohric.com>", "GenshinMinecraft <gm@highp.ing>"]
description = "Benchmarking utility written in pure rust"
readme = "README.md"
repository = "https://github.com/rsbench/rsbench"
license = "MIT"
homepage = "https://rsbench.github.io"

[package.metadata.deb]
maintainer = "GenshinMinecraft"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
paris = {version = "1.5.15", features=["macros"]}
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "cookies", "stream"] }
sysinfo = "0.33.0"
tokio = {version="1.42.0", features = ["rt-multi-thread", "macros"]}
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
termcolor = "1.4.1"
async-stream = "0.3.6"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
dmidecode = "0.8.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi"] }

[workspace.metadata.cross.target.aarch64-linux-android]
image = "genshinmc/rust-cross-new-ndk-aarch64-linux-android:0.0.1"

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false }

