[package]
name = "rsbench"
version = "0.5.15" # It is recommended that every Commit that modifies a Rust file should update a minor version.
edition = "2021"

authors = ["moohr <moohric@moohric.com>", "GenshinMinecraft <gm@highp.ing>"]
description = "Benchmarking utility written in pure rust"
readme = "README.md"
repository = "https://github.com/rsbench/rsbench"
license = "MIT"
homepage = "https://rsbench.github.io"

[package.metadata.deb]
maintainer = "GenshinMinecraft"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.27", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
paris = { version = "1.5.15", features = ["macros"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "cookies", "stream", "json"] }
sysinfo = "0.33.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
termcolor = "1.4.1"
async-stream = "0.3.6"
rand = { version = "0.9.0", default-features = false, features = ["std", "std_rng", "thread_rng"] }
dmidecode = "0.8.5"
serde = { version = "1.0.217", default-features = false, features = ["std", "derive"]}
serde_json = { version = "1.0.138", default-features = false, features = ["std"] }
crossterm = { version = "0.28.1", default-features = false, features = ["windows"] }
prettytable = { version = "0.10.0", default-features = false }
lazy_static = "1.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi"] }

[workspace.metadata.cross.target.aarch64-linux-android]
image = "genshinmc/rust-cross-new-ndk-aarch64-linux-android:0.0.1"

[workspace.metadata.cross.build.env]
passthrough = [
    "CROSS_PASTEBIN_URL",
    "CROSS_PASTEBIN_SECRET",
]

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false }

